ingress-config-maps-secrets/03-ingress/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-backend
  template:
    metadata:
      labels:
        app: yatri-backend
    spec:
      containers:
        - name: backend
          image: hashicorp/http-echo:1.0
          args:
            - "-listen=:5678"
            - "-text=Hello from the Yatri backend"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-backend-service
spec:
  selector:
    app: yatri-backend
  ports:
    - port: 80
      targetPort: 5678
