ingress-config-maps-secrets/03-ingress/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-frontend
  template:
    metadata:
      labels:
        app: yatri-frontend
    spec:
      containers:
        - name: frontend
          image: nginx:1.27
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-frontend-service
spec:
  selector:
    app: yatri-frontend
  ports:
    - port: 80
      targetPort: 80
